# vector-db-learn

./: README.md  pyproject.toml
src/vector_db_learn/: __init__.py
src/vector_db_learn/approximate_nn/: hnsw.py  ivf.py  ivfpq.py
src/vector_db_learn/brute_force_search/: tiny_vector_store_with_metadata.py
src/vector_db_learn/runners/: vector_store_runners.py
src/vector_db_learn/vector_similarity/: __init__.py  sentence_transformers_demo.py  tiny_vector_store.py
