[project]
name = "vector-db-learn"
version = "0.1.0"
description = "Learning Vector DB using first principles and socratic learning"
authors = [
    {name = "ani03sha",email = "anirudh03sharma@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
